# eman2

./: .cdtproject  .claudeignore  .cmdhistory  .cproject  .gitignore  .project  .pydevproject  .travis.yml  1  BSD-3-Clause.txt  CMakeLists.txt  ChangeLog  Dockerfile  INSTALL  INSTALL_MACOSX.md  Jenkinsfile  README  README.md  SConscript  TODO  TODO.txt  appveyor.yml  build.py  build.sh  circle.yml  eer_test.py  install-dependencies.py  libtbx_refresh.py  makedoc.sh  purifycode.sh  py3_divs.txt  py3_divs_sparx.txt  replace_w_old_div.py  run_eer_avg.py  test-imports.py  update_py3_divs.py
doc/: CMakeLists.txt  Doxyfile  EMAN2.dvi  EMAN2.ps  INSTALL  WindowsVisualStudioDotNet2003CompilationNotes.txt  adding_processor.html  adding_processor.txt  coding_style.html  cvshowto.html  develop_system_setup.html  developer-guide.html  development_policy_faq.html  eman2doc.h  exception_faq.html  header_naming.html  index.html  processor_groups.html  processors.html  testing.html
doc/doxygen/: CMakeLists.txt  Doxyfile  makedoc.sh
doc/latex/: CMakeLists.txt  EMAN2.lot  EMAN2.tex  Makefile  TOC.tex  adding-components.tex  adding-documentation.tex  coding-style.tex  development-policy-faq.tex  e2align3d.tex  e2aligntest.tex  e2boxer.tex  e2cmmtomrc.tex  e2dumplog.tex  e2make3d.tex  e2scannereval.tex  e2symbest.tex  e2tomogram.tex  exceptions.tex  factory-classes.tex  frame-work-testing.tex  goals.tex  help-opt-prog-inst.tex  hyperref.perl  image-header-attribs.tex  index.tex  install.tex  logger.tex  make3d.tex  manual.cls  misc-developers-guide.tex  processors.tex  project3d.tex  reference-manual.tex  rm_preamble.py  using-cvs.tex
doc/modular_class_html/: CMakeLists.txt  docgen.py
doc/processor_html/: CMakeLists.txt  docgen.py
doc/programs_help_html/: CMakeLists.txt  generate_program_options_html.py  index.html.tmpl  programs_with_more_info.txt  script.js  styles.css
eman2/doc/: CMakeLists.txt  INSTALL  doc.html  index.html
images/: CMakeLists.txt  Close.txt
images/macimages/: CMakeLists.txt
libEM/: Assert.h  CMakeLists.txt  Isosurface.h  MarchingCubes.cpp  MarchingCubes.h  Mesh.h  SConscript  VoxelData.h  aligner.cpp  aligner.h  all_imageio.h  amiraio.cpp  amiraio.h  analyzer.cpp  analyzer.h  averager.cpp  averager.h  boxingtools.cpp  boxingtools.h  byteorder.cpp  byteorder.h  cmp.cpp  cmp.h  ctf.cpp  ctf.h  df3io.cpp  df3io.h  dm3io.cpp  dm3io.h  dm4io.cpp  dm4io.h  emassert.h  emcache.cpp  emcache.h  emdata.cpp  emdata.h  emdata_core.cpp  emdata_core.h  emdata_cuda.cpp  emdata_cuda.h  (+123 more)
libEM/cuda/: CMakeLists.txt  CudaDependency.cmake  FindCUDA.cmake  FindCuda.cmake  cuda_cmp.cu  cuda_cmp.h  cuda_emfft.cu  cuda_emfft.h  cuda_processor.cu  cuda_processor.h  cuda_projector.cu  cuda_projector.h  cuda_reconstructor.cu  cuda_reconstructor.h  cuda_util.cu  cuda_util.h  emcudautil.cpp  emcudautil.h  run_nvcc.cmake
libEM/fonts/: CMakeLists.txt  readme.txt
libEM/gorgon/: CMakeLists.txt  grid_queue2.h  priority_que.cpp  priority_que.h  priority_queue.h  skeletonizer.cpp  skeletonizer.h  volume.cpp  volume.h  volume_data.cpp  volume_data.h
libEM/io/: Renderer.h  all_imageio.h  amiraio.cpp  amiraio.h  df3io.cpp  df3io.h  dm3io.cpp  dm3io.h  dm4io.cpp  dm4io.h  eerio.cpp  eerio.h  emio.cpp  emio.h  fitsio.cpp  fitsio.h  gatan2io.cpp  gatan2io.h  hdf_filecache.h  hdfio.cpp  hdfio.h  hdfio2.cpp  hdfio2.h  icosio.cpp  icosio.h  imageio.cpp  imageio.h  imagicio.cpp  imagicio.h  imagicio2.cpp  imagicio2.h  jpegio.cpp  jpegio.h  lstfastio.cpp  lstfastio.h  lstio.cpp  lstio.h  mrcio.cpp  mrcio.h  omapio.cpp  (+27 more)
libEM/plugins/: CMakeLists.txt  aligner_template.cpp  averager_template.cpp  io_template.cpp  io_template.h  processor_template.cpp  processor_template.h  projector_template.cpp  projector_template.h  reconstructor_template.cpp  reconstructor_template.h
libEM/pmconfig/: CMakeLists.txt  RCTboxer.json  RCTboxergo.json  boxer.json  boxergo.json  breaksym.json  buildstacks.json  classaverage3d.json  coordimport.json  ctfautofit.json  ctfgo.json  raw  (+26 more)
libpyEM/: Anneal.py  CMakeLists.txt  EMAN.py  EMAN2.py  EMAN2PAR.py  EMAN2_cppwrap.py  EMAN2_meta.py.in  EMAN2_utils.py  EMAN2db.py  EMAN2fsc.py  EMAN2jsondb.py  EMAN2star.py  EMAN3.py  EMAN3jax.py  EMAN3jsondb.py  EMAN3star.py  EMAN3tensor.py  Makefile.pyste  SConscript  Simplex.py  Sparx.py  aligner.pyste  analyzer.pyste  averager.pyste  cmp.pyste  create_boost_python  e2EMAN.py  e3jupyter_widget_2d.py  emdata.pyste  emdata_pickle.h  emdata_wrapitems.cpp  emdata_wrapitems.h  emdata_wrapitems.py  emftgl.cpp  emftgl.h  emobject.pyste  factory.pyste  filter.pyste  fundamentals.pyste  geometry.pyste  (+59 more)
plugins/: CMakeLists.txt  aligner_template.cpp  aligner_template.h  averager_template.cpp  averager_template.h  cmp_template.cpp  cmp_template.h  filter_template.cpp  filter_template.h  io_template.cpp  io_template.h  processor_template.cpp  processor_template.h  projector_template.cpp  projector_template.h  reconstructor_template.cpp  reconstructor_template.h
programs/: CMakeLists.txt  ct_functions.py  e2.py  e22.py  e2InterpolateJsonEulersAmongFramesV2.py  e2RCTboxer.py  e2_real.py  e2a2d_align.py  e2a2d_average.py  e2a2d_masks.py  e2a2d_stat.py  e2ali2img.py  e2align2d.py  e2align3d.py  e2aligntest.py  e2au.py  e2avg_ffts.py  e2basis.py  e2bdb.py  e2boxadjust.py  e2boxer.py  e2boxer2.py  e2boxer21.py  e2boxer_old.py  e2buildsets.py  e2buildstacks.py  e2classaverage.py  e2classaverage3d.py  e2classaveragebysym.py  e2classes_denovo.py  e2classesbyref.py  e2classesbysim.py  e2classextract.py  e2classify.py  e2classifycnn.py  e2classifykmeans.py  e2classifyligand.py  e2classifytree.py  e2classmxxplor.py  e2classptcl.py  (+310 more)
sphire/: .gitlab-ci.yml  CMakeLists.txt  README.md  __init__.py  setup.py
utils/: CMakeLists.txt  baldwinweights.cpp  build_and_install_openmpi.sh  build_eman_numpy.sh  build_pydusa_numpy.sh  bump_version.py  docgen.py  iminfo.cpp  install_eman_numpy.sh  install_pydusa.sh  install_pydusa_numpy.sh  proc2d.cpp  remove_unused.py  rename_it.py  replace_shebang.sh  scratch.txt  speedtest.cpp  tag_new_version.py  uninstall_openmpi.sh
(+2142 files in other folders)
